--- a/MODAMSWeb/Areas/Users/Views/Assets/AssetPictures.cshtml
+++ b/MODAMSWeb/Areas/Users/Views/Assets/AssetPictures.cshtml
@@ -44,7 +44,7 @@
                             <div class="form-group">
                                 <label class="form-label">Choose picture to upload</label>
                                 <div class="input-group">
-                                    <input class="form-control file-input form-control-sm" type="file" id="file" name="file" required accept="image/*">
+                                    <input class="form-control file-input" type="file" id="file" name="file" required accept="image/*">
                                     <button class="btn btn-primary btn-sm"><i class="fa fa-solid fa-upload"></i> Upload</button>
                                 </div>
                                 <div class="invalid-feedback">
