--- a/MODAMSWeb/Areas/Users/Views/Home/Index.cshtml
+++ b/MODAMSWeb/Areas/Users/Views/Home/Index.cshtml
@@ -7,6 +7,9 @@
         min-height: 170px;
     }
 
+    .hover-effect:hover {
+        opacity: 0.5;
+    }
     .legend span {
         padding-block: 3px;
         padding-left: 5px;
@@ -158,7 +161,7 @@
                                             <td class="text-muted fs-15 fw-semibold">
                                                 <a asp-action="AssetList" asp-controller="Assets" 
                                                 asp-route-id="@sca.Id"
-                                                class="text-gray-dark">@sca.CategoryName</a>
+                                                   class="text-gray-dark hover-effect">@sca.CategoryName</a>
                                             </td>
                                             <td class="text-muted fs-15 fw-semibold">@sca.TotalAssets</td>
                                         </tr>
