--- a/MODAMSWeb/Views/Shared/layouts/_app-sidebar.cshtml
+++ b/MODAMSWeb/Views/Shared/layouts/_app-sidebar.cshtml
@@ -3,7 +3,7 @@
     <div class="app-sidebar__overlay" data-bs-toggle="sidebar"></div>
     <div class="app-sidebar">
         <div class="side-header">
-            <a class="header-brand1" asp-area="" asp-page="/Index">
+            <a class="header-brand1" asp-area="Users" asp-controller="Home" asp-action="Index">
                 @*<img src="~/assets/images/brand/FGS_Small4.png" />*@
 
                 @*                <img src="~/assets/images/brand/FGS.png" class="header-brand-img desktop-logo" alt="logo">
