--- a/MODAMSWeb/Views/_ViewImports.cshtml
+++ b/MODAMSWeb/Views/_ViewImports.cshtml
@@ -1,3 +1,5 @@
 ﻿@using MODAMSWeb
 @using MODAMS.Models
+@using Kendo.Mvc.UI
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, Kendo.Mvc
